# MSTP-Generator-GUI

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  PatternGeneratorPresenter.cpp  PatternGeneratorPresenter.hpp  image_provider.cpp  image_provider.hpp  main.cpp
src/qml/: main.qml
src/qml/components/: CustomSpinBox.qml  DoubleSpinBox.qml  ScaleController.qml  components.qrc  qmldir
